import org.springframework.boot.gradle.tasks.bundling.BootJar

plugins {
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
    id 'idea'

}

group = 'at'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    // Spring AI пока в Milestone, поэтому нужен этот репозиторий
    maven { url 'https://repo.spring.io/milestone' }
}

// Управление версиями зависимостей Jackson через BOM
dependencyManagement {
    imports {
        mavenBom "com.fasterxml.jackson:jackson-bom:2.17.2"
//        mavenBom "com.vaadin:vaadin-bom:24.9.3"
    }
}

dependencies {
    //bugbusters библиотеки
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation files('libs/JiraClient-1.6.3.jar', 'libs/JiraClient-1.6.3-sources.jar')
    implementation 'org.apache.commons:commons-text:1.3'
    implementation files('libs/RestClients-1.5.3.jar', 'libs/RestClients-1.5.3-sources.jar')

    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux' // для Reactor Flux

    // Spring AI для работы с OpenAI-совместимыми моделями (Qwen через vLLM)
    implementation 'org.springframework.ai:spring-ai-starter-model-openai:1.1.0'
    implementation 'org.springframework.ai:spring-ai-client-chat:1.1.0'

    // MCP Server Starter для Streamable HTTP
    implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc:1.1.0'

    // Spring Doc (Swagger UI) для документации и тестирования API в браузере
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // JSON Processing - версии управляются через jackson-bom
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.jayway.jsonpath:json-path:2.9.0'

    // HTTP Client для внешних интеграций
//    implementation 'org.apache.httpcomponents.client5:httpclient5'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Vaadin
//    implementation "com.vaadin:vaadin-spring-boot-starter"
//    implementation 'io.projectreactor:reactor-core'
//    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    // Vaadin Firitin для MarkdownMessage (правильные координаты)
//    implementation 'in.virit:viritin:2.21.1'

    // Markdown processing
    implementation 'org.commonmark:commonmark:0.21.0'
    implementation 'org.commonmark:commonmark-ext-gfm-tables:0.21.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

//    implementation 'org.springframework.ai:spring-ai-agent:1.1.0'
    implementation 'org.springframework.ai:spring-ai-mcp-annotations:1.1.0'
    implementation 'org.springframework.ai:spring-ai-mcp:1.1.0'
    implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc:1.1.0'
}

tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
        exceptionFormat 'full'
    }
}

tasks.named('jar') {
    enabled = false
}

